// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating interchange elements have duplicate metaEdId should have validation failures -> message 1`] = `"MetaEdId '1' on Interchange Item DomainEntityElementName1 already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating interchange elements have duplicate metaEdId should have validation failures -> message 2`] = `"MetaEdId '1' on Interchange Item DomainEntityIdentityTemplateName2 already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating interchange elements have duplicate metaEdId should have validation failures -> sourceMap 1`] = `
Object {
  "column": 43,
  "line": 5,
  "tokenText": "[1]",
}
`;

exports[`when validating interchange elements have duplicate metaEdId should have validation failures -> sourceMap 2`] = `
Object {
  "column": 61,
  "line": 7,
  "tokenText": "[1]",
}
`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> message 1`] = `"MetaEdId '1' on Domain Entity DomainEntityName1 already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> message 2`] = `"MetaEdId '1' on Domain Entity DomainEntityName2 already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> message 3`] = `"MetaEdId '1' on Domain Entity DomainEntityName1 already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> message 4`] = `"MetaEdId '1' on Domain Item DomainItemName1 already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> message 5`] = `"MetaEdId '1' on Enumeration Item EnumerationItemShortDescription already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> message 6`] = `"MetaEdId '2' on Domain Entity DomainEntityName2 already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> message 7`] = `"MetaEdId '2' on Interchange Item DomainEntityElementName1 already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> sourceMap 1`] = `
Object {
  "column": 34,
  "line": 2,
  "tokenText": "[1]",
}
`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> sourceMap 2`] = `
Object {
  "column": 34,
  "line": 9,
  "tokenText": "[1]",
}
`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> sourceMap 3`] = `
Object {
  "column": 34,
  "line": 2,
  "tokenText": "[1]",
}
`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> sourceMap 4`] = `
Object {
  "column": 34,
  "line": 28,
  "tokenText": "[1]",
}
`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> sourceMap 5`] = `
Object {
  "column": 45,
  "line": 22,
  "tokenText": "[1]",
}
`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> sourceMap 6`] = `
Object {
  "column": 34,
  "line": 9,
  "tokenText": "[2]",
}
`;

exports[`when validating two domain entities have duplicate metaEdId should have validation failures -> sourceMap 7`] = `
Object {
  "column": 43,
  "line": 32,
  "tokenText": "[2]",
}
`;

exports[`when validating two domain items have duplicate metaEdId should have validation failures -> message 1`] = `"MetaEdId '1' on Domain Item DomainItemName1 already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two domain items have duplicate metaEdId should have validation failures -> message 2`] = `"MetaEdId '1' on Domain Item DomainItemName2 already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two domain items have duplicate metaEdId should have validation failures -> sourceMap 1`] = `
Object {
  "column": 34,
  "line": 5,
  "tokenText": "[1]",
}
`;

exports[`when validating two domain items have duplicate metaEdId should have validation failures -> sourceMap 2`] = `
Object {
  "column": 34,
  "line": 9,
  "tokenText": "[1]",
}
`;

exports[`when validating two enumeration items have duplicate metaEdId should have validation failures -> message 1`] = `"MetaEdId '1' on Enumeration Item EnumerationItemName already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two enumeration items have duplicate metaEdId should have validation failures -> message 2`] = `"MetaEdId '1' on Enumeration Item EnumerationItemName already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two enumeration items have duplicate metaEdId should have validation failures -> sourceMap 1`] = `
Object {
  "column": 31,
  "line": 5,
  "tokenText": "[1]",
}
`;

exports[`when validating two enumeration items have duplicate metaEdId should have validation failures -> sourceMap 2`] = `
Object {
  "column": 31,
  "line": 11,
  "tokenText": "[1]",
}
`;

exports[`when validating two map type enumeration items have duplicate metaEdId should have validation failures -> message 1`] = `"MetaEdId '1' on Enumeration Item EnumerationItemShortDescription already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two map type enumeration items have duplicate metaEdId should have validation failures -> message 2`] = `"MetaEdId '1' on Enumeration Item EnumerationItemShortDescription already exists on another entity. All MetaEdIds must be globally unique."`;

exports[`when validating two map type enumeration items have duplicate metaEdId should have validation failures -> sourceMap 1`] = `
Object {
  "column": 45,
  "line": 8,
  "tokenText": "[1]",
}
`;

exports[`when validating two map type enumeration items have duplicate metaEdId should have validation failures -> sourceMap 2`] = `
Object {
  "column": 45,
  "line": 17,
  "tokenText": "[1]",
}
`;
